--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -199,13 +199,10 @@
     }
    },
    "source": [
-    "## Aims of the Workshop\n",
+    "## Workshop Aim\n",
     "\n",
-    "- **Python Syntax**\n",
-    "    + Variable\n",
-    "    + Indentation\n",
-    "    + Comments\n",
-    "    + Python Help\n",
+    "- **Python Syntax**: `Variable`, `Indentation`, `Comments`, `Help`\n",
+    "\n",
     "- **Data Types and Methods**: Mutable and Immutable\n",
     "    + **Text Type**: `str`\n",
     "    + **Numeric Types**: `int, float, complex`\n",
@@ -213,13 +210,19 @@
     "    + **Mapping Type**:\t`dict`\n",
     "    + **Set Types**: `set, frozenset`\n",
     "    + **Boolean Type**:\t`bool`\n",
+    "    + **Numpy module**: `array`\n",
+    "    + **Pandas module**: `DataFrame`\n",
+    "\n",
     "- **Conditions, Loops, Functions**\n",
+    "\n",
     "- **Basic Modules** and respective Functions\n",
-    "    + **`Numpy`**: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
-    "    + **`Pandas`**: DataFrames, Data Manipulation\n",
-    "    + **`Scipy`**: Stats functions, optimize functions\n",
-    "    + **`Matplotlib`**: Visualization\n",
-    "- Exercises "
+    "    + **`numpy`**: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
+    "    + **`pandas`**: DataFrames, Data Manipulation\n",
+    "    + **`scipy`**: Stats functions, optimize functions\n",
+    "    + **`seaborn`**: Visualization\n",
+    "    + Miscellaneous\n",
+    "\n",
+    "- **Exercises**"
    ]
   },
   {
@@ -664,12 +667,13 @@
     "Use the above manner of using `dir` to find the list of methods applicable\n",
     "to class `list` and apply those that are most appropriate for the following task:\n",
     "\n",
-    "**Task:** Use `x = [3, 10, 7]` and using the methods for a `list` and \n",
-    "    - concatenate 4 to the list\n",
-    "    - sort in descending order\n",
-    "    - remove the item at index 2 from original variable and return removed value to a new variable\n",
-    "    - clear the entire list\n",
-    "    - Also find using help, the difference between `pop` and `remove`.\n",
+    "**Task:** \n",
+    "Use `x = [3, 10, 7]` and using the methods for a `list` and:\n",
+    "   - concatenate 4 to the list\n",
+    "   - sort in descending order\n",
+    "   - remove the item at index 2 from original variable and return removed value to a new variable\n",
+    "   - clear the entire list\n",
+    "   - Also find using help, the difference between `pop` and `remove`.\n",
     "    \n",
     " Use print statements at the end of every task to view x at the end of every method application.\n",
     "\n",
@@ -678,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 125,
    "id": "599b067f",
    "metadata": {
     "slideshow": {
@@ -690,55 +694,94 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 10, 7, 4]\n",
-      "[3, 4, 7, 10]\n",
-      "[10, 7, 4, 3]\n",
-      "[10, 7, 3]\n",
-      "4\n",
-      "[10, 7]\n",
-      "[]\n",
-      "Help on built-in function pop:\n",
-      "\n",
-      "pop(index=-1, /) method of builtins.list instance\n",
-      "    Remove and return item at index (default last).\n",
-      "    \n",
-      "    Raises IndexError if list is empty or index is out of range.\n",
-      "\n",
-      "None\n",
-      "Help on built-in function remove:\n",
-      "\n",
-      "remove(value, /) method of builtins.list instance\n",
-      "    Remove first occurrence of value.\n",
-      "    \n",
-      "    Raises ValueError if the value is not present.\n",
-      "\n",
-      "None\n"
+      "['append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort']\n"
      ]
     }
    ],
    "source": [
     "## Initiate a list\n",
     "x = [3, 10, 7]\n",
-    "\n",
+    "print([method for method in dir(x) if method.startswith('__') is False])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df193d60",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "## Append 4\n",
     "x.append(4)\n",
-    "print(x)\n",
-    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaef8e4a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Sort in ascending\n",
     "x.sort()\n",
-    "print(x)\n",
-    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49d274f4",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Reverse order\n",
     "x.reverse()\n",
-    "print(x)\n",
-    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5597bf0a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Pop and remove application\n",
     "y = x.pop(2)  ## uses index, defaults last\n",
     "print(x)\n",
     "print(y)\n",
     "x.remove(3)  ## uses value, removes its first occurence, no default\n",
-    "print(x)\n",
-    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c358e8e7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
     "## Clear\n",
     "x.clear()\n",
     "print(x)\n",
@@ -784,9 +827,9 @@
     }
    },
    "source": [
-    "### Illustration: Data types - \n",
+    "### Illustration: Data types\n",
     "\n",
-    "The following is an illustration of obtaining objects of different data types.\n",
+    "The following is an illustration of obtaining objects of different data types and some of the methods for each of them.\n",
     "\n",
     "#### String\n",
     "- String is an array of bytes representing unicode characters and thus elemets can be accessed.\n",
@@ -807,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "id": "28d5699d",
    "metadata": {
     "slideshow": {
@@ -833,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 127,
    "id": "3a8c1ea4",
    "metadata": {
     "slideshow": {
@@ -859,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 128,
    "id": "cc5f5148",
    "metadata": {
     "slideshow": {
@@ -891,14 +934,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "id": "4dbdf4f3",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'I am Surya and I teach Statistics'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# check string for some\n",
     "print(\"at\" in x)\n",
@@ -1115,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 131,
    "id": "296012f5",
    "metadata": {
     "slideshow": {
@@ -1131,7 +1192,9 @@
       "(2, [1, 2])\n",
       "(1, 2, [1, 2], 1, 'abc', 2)\n",
       "(1, 2, [1, 2], 1, 'abc', 1, 2, [1, 2], 1, 'abc')\n",
-      "2\n"
+      "2\n",
+      "5189424288\n",
+      "5190996608\n"
      ]
     }
    ],
@@ -1148,7 +1211,11 @@
     "print(y*2)\n",
     "\n",
     "## Methods\n",
-    "print(y.count(1))"
+    "print(y.count(1))\n",
+    "\n",
+    "## Check address of tuple after modification.\n",
+    "print(id(y))\n",
+    "print(id(y + (2,)))"
    ]
   },
   {
@@ -1627,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 135,
    "id": "bf524bab",
    "metadata": {
     "slideshow": {
@@ -1639,25 +1706,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['usual', 'usual', 'usual', 'usual', 'usual', 'usual', 'usual', 'usual', 'usual', 'usual', 'amazing', 'usual', 'usual', 'usual', 'usual', 'usual', 'exit']\n",
-      "process going on at step 0\n",
+      "['usual', 'usual', 'usual', 'amazing', 'usual', 'usual', 'exit']\n",
       "process going on at step 1\n",
       "process going on at step 2\n",
       "process going on at step 3\n",
+      "something amazing happened at 4 step\n",
       "process going on at step 4\n",
       "process going on at step 5\n",
       "process going on at step 6\n",
-      "process going on at step 7\n",
-      "process going on at step 8\n",
-      "process going on at step 9\n",
-      "something amazing happened at 10 step\n",
-      "process going on at step 10\n",
-      "process going on at step 11\n",
-      "process going on at step 12\n",
-      "process going on at step 13\n",
-      "process going on at step 14\n",
-      "process going on at step 15\n",
-      "process stopped at step 16\n"
+      "process stopped at step 7\n"
      ]
     }
    ],
@@ -1665,14 +1722,14 @@
     "# if i += 1 is not given i would always be 0 and it will \n",
     "# print infinite number of messages and not break unless you use break.\n",
     "\n",
-    "x = ['usual']*10 + ['amazing'] + ['usual']*5 + ['exit']\n",
+    "x = ['usual']*3 + ['amazing'] + ['usual']*2 + ['exit']\n",
     "print(x)\n",
     "\n",
-    "i = 0\n",
-    "while x[i] != 'exit':\n",
+    "i = 1\n",
+    "while x[i-1] != 'exit':\n",
     "    print(f'process going on at step {i}')\n",
     "    i += 1\n",
-    "    if (x[i] == 'amazing'):\n",
+    "    if (x[i-1] == 'amazing'):\n",
     "        print(f'something amazing happened at {i} step')\n",
     "        continue\n",
     "else:\n",
@@ -1681,7 +1738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea9bed4",
+   "id": "251901db",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1696,8 +1753,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "53451b08",
+   "execution_count": 137,
+   "id": "b5b07cfe",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1708,8 +1765,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n",
-      "15\n"
+      "5\n"
      ]
     }
    ],
@@ -1720,8 +1776,28 @@
     "    if temp == 'usual':\n",
     "        count += 1 \n",
     "\n",
-    "print(count)\n",
-    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "2b80fd60",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
     "# using the range function\n",
     "count = 0\n",
     "for i in range(len(x)):\n",
@@ -1740,7 +1816,7 @@
     }
    },
    "source": [
-    "## `function`, Scope\n",
+    "## `function`, scope\n",
     "\n",
     "- A function is defined using keywords `def` followed by function name and arguments within paranthesis.\n",
     "- This should be followed by `:` and indentation.\n",
@@ -1752,13 +1828,13 @@
     "- A `lamdba` is a small anonymous function which returns the result in the same line (a useful property).\n",
     "\n",
     "#### `%timeit`\n",
-    "- %timeit is a magic function in Python that evaluates time taken based on 1000 runs for optimizing time. Number of runs can also be changed"
+    "- `%timeit` is a magic function in Python that evaluates time taken based on 1000 runs for optimizing time. Number of runs can also be changed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "id": "3faa4684",
+   "execution_count": 139,
+   "id": "32e5444e",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1769,20 +1845,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 µs ± 213 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
-      "12\n"
+      "13.9 µs ± 1.2 µs per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
    "source": [
+    "## function definition\n",
     "def fib_rs(n):\n",
     "    if (n==1 or n==2):\n",
     "        return 1\n",
     "    else:\n",
     "        return fib_rs(n - 1) + fib_rs(n - 2)\n",
     "\n",
-    "%timeit fib_rs(10)    \n",
-    "\n",
+    "%timeit fib_rs(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "70453d7b",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "## lambda definition\n",
     "def n_multiplier(n):\n",
     "    return lambda a : a * n\n",
     "\n",
@@ -1792,7 +1889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce508c3a",
+   "id": "dec2a851",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -1810,7 +1907,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "c40941ac",
+   "id": "e67aebc6",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1925,7 +2022,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "902ff02f",
+   "id": "1d5d86bd",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2006,19 +2103,21 @@
    "source": [
     "## `pandas`\n",
     "\n",
-    "- Pandas are mostly known for data frames with row names and column names.\n",
+    "- Pandas are mostly known for data frames with row names and column names which allows for collection of heterogeneous data.\n",
     "- The main data types here are: `pd.Series()`, `pd.DataFrame()`,`pd.Index()`\n",
     "- Series is an analog of a one-dimensional array with flexible indices, a DataFrame is an analog of a two-dimensional array with both flexible row indices and flexible column names\n",
     "- DataFrame as a sequence of aligned Series objects. Here, by “aligned” we mean that they share the same index.\n",
     "- Pandas index is an immutable array. It is like an array in many ways but cannot be modified unlike numpy arrays.\n",
-    "- `iloc`, `loc` are important methods.\n",
-    "- `read_csv('filename.csv', header  = 0)`"
+    "- `iloc`, `loc` are important methods to access values based on labels or positions respectively.\n",
+    "- `read_csv('filename.csv', header  = 0)` allows to read from a csv file while `header=None` allows for changing column labels later and method `.to_csv` allows to write to a file.\n",
+    "- **Methods**: `.describe(), .hist(), .boxplot(), `\n",
+    "- Pandas cheatsheet can be obtained from [here](https://pandas.pydata.org/Pandas_Cheat_Sheet.pdf)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 120,
-   "id": "b96fe757",
+   "id": "f2e1103c",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2098,7 +2197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83b612b8",
+   "id": "afacc89a",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2130,7 +2229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c623d7",
+   "id": "60b9f4ab",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2151,7 +2250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb95128",
+   "id": "91bd798a",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2171,7 +2270,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39fecaac",
+   "id": "c97a4700",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2179,7 +2278,7 @@
    },
    "outputs": [],
    "source": [
-    "read_csv('filename.csv', header  = 0)"
+    "## read_csv('filename.csv', header  = 0)"
    ]
   },
   {
@@ -2193,9 +2292,9 @@
    "source": [
     "## `scipy`\n",
     "\n",
-    "- stats package in scipy has all statistical functions\n",
-    "- Usual statistical models\n",
-    "- optimize function."
+    "- `stats` sub-module in scipy has most statistical functions\n",
+    "- It also contains statistical models like linear regression\n",
+    "- Scipy module also contains minimize function. "
    ]
   },
   {
@@ -2207,20 +2306,28 @@
     }
    },
    "source": [
-    "## Data Visualization:\n",
-    "   \n",
-    "- `seaborn`\n"
+    "## Data Visualization: `seaborn`\n",
+    "\n",
+    "- Tutorial on `seaborn` is available [Here](https://seaborn.pydata.org/tutorial.html)\n",
+    "- \n"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "127e4434",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "## Miscellaneous \n",
+    "## Miscellaneous important modules\n",
     "\n",
-    "- `scikit`: neural networks \n",
-    "- `matplotlib`: more powerful data visualization"
+    "- `scikit`: machine learning algorithms, built on numpy, scipy and matplotlib \n",
+    "- `matplotlib`: more powerful data visualization\n",
+    "- `requests`: web API (application programming interfaces)\n",
+    "- `tensorflow: keras`: dense neural networks\n",
+    "- `imageio`: image processing"
    ]
   },
   {
@@ -2232,7 +2339,9 @@
     }
    },
    "source": [
-    "## Quiz"
+    "## Quiz\n",
+    "\n",
+    "- Read a dataset Lahman."
    ]
   },
   {
@@ -2294,8 +2403,18 @@
     "- Wish you all the best of luck with working on Python.\n",
     "- I will be available at [surya.eada@uconn.edu](mailto:surya.eada@uconn.edu)\n",
     "\n",
-    "## Questions?"
+    "\n",
+    "## Questions:\n",
+    "![Questions](https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/question-mark-icon-on-white-puzzle-royalty-free-image-917901148-1558452934.jpg?crop=0.66635xw:1xh;center,top&resize=980:*)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97007c1a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
