--- a/Practice.ipynb
+++ b/Practice.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "93809da0",
    "metadata": {},
@@ -28,7 +27,9 @@
    "cell_type": "markdown",
    "id": "84f15402",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Find Python Installation and Version"
+   ]
   },
   {
    "cell_type": "code",
@@ -36,126 +37,89 @@
    "id": "50f0650a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Empty for your trial on finding python version\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "2d83a486",
+   "id": "96b873af",
    "metadata": {},
    "source": [
-    "## Python Indentation"
+    "## Quiz on help with Variables\n",
+    "\n",
+    "Use the above manner of using `dir` to find the list of methods applicable\n",
+    "to class `list` and apply those that are most appropriate for the following task:\n",
+    "\n",
+    "**Task:** \n",
+    "Use `x = [3, 10, 7]` to create a variable x for the list, and using the methods for a `list` and:\n",
+    "   - concatenate 4 to the list\n",
+    "   - sort in descending order\n",
+    "   - remove the item at index 2 from original variable and return removed value to a new variable\n",
+    "   - clear the entire list\n",
+    "   - Also find using help, the difference between `pop` and `remove`.\n",
+    "    \n",
+    " Use print statements at the end of every task to view x at the end of every method application.\n",
+    "\n",
+    "**Note:** If you are unsure of a particular method, use `help(type.method)` or `help(object.method)`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "b2534db0",
+   "execution_count": null,
+   "id": "23220ceb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'> : \t ['capitalize', 'casefold', 'center', 'count', 'encode', 'endswith', 'expandtabs', 'find', 'format', 'format_map', 'index', 'isalnum', 'isalpha', 'isascii', 'isdecimal', 'isdigit', 'isidentifier', 'islower', 'isnumeric', 'isprintable', 'isspace', 'istitle', 'isupper', 'join', 'ljust', 'lower', 'lstrip', 'maketrans', 'partition', 'removeprefix', 'removesuffix', 'replace', 'rfind', 'rindex', 'rjust', 'rpartition', 'rsplit', 'rstrip', 'split', 'splitlines', 'startswith', 'strip', 'swapcase', 'title', 'translate', 'upper', 'zfill'] \n",
-      "\n",
-      "<class 'int'> : \t ['as_integer_ratio', 'bit_length', 'conjugate', 'denominator', 'from_bytes', 'imag', 'numerator', 'real', 'to_bytes'] \n",
-      "\n",
-      "<class 'float'> : \t ['as_integer_ratio', 'conjugate', 'fromhex', 'hex', 'imag', 'is_integer', 'real'] \n",
-      "\n",
-      "<class 'bool'> : \t ['as_integer_ratio', 'bit_length', 'conjugate', 'denominator', 'from_bytes', 'imag', 'numerator', 'real', 'to_bytes'] \n",
-      "\n",
-      "<class 'complex'> : \t ['conjugate', 'imag', 'real'] \n",
-      "\n",
-      "<class 'list'> : \t ['append', 'clear', 'copy', 'count', 'extend', 'index', 'insert', 'pop', 'remove', 'reverse', 'sort'] \n",
-      "\n",
-      "<class 'tuple'> : \t ['count', 'index'] \n",
-      "\n",
-      "<class 'range'> : \t ['count', 'index', 'start', 'step', 'stop'] \n",
-      "\n",
-      "<class 'dict'> : \t ['clear', 'copy', 'fromkeys', 'get', 'items', 'keys', 'pop', 'popitem', 'setdefault', 'update', 'values'] \n",
-      "\n",
-      "<class 'set'> : \t ['add', 'clear', 'copy', 'difference', 'difference_update', 'discard', 'intersection', 'intersection_update', 'isdisjoint', 'issubset', 'issuperset', 'pop', 'remove', 'symmetric_difference', 'symmetric_difference_update', 'union', 'update'] \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "MyClass = list\n",
     "method_list = [method for method in dir(MyClass) if method.startswith('__') is False]\n",
-    "for MyClass in [str, int, float,  bool, complex, list, tuple, range, dict, set]:\n",
-    "    print(f\"{MyClass} : \\t {[method for method in dir(MyClass) if method.startswith('__') is False]} \\n\")"
+    "print(method_list)\n",
+    "\n",
+    "# Use the above to find methods and apply as in the quiz.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93e67d99",
+   "metadata": {},
+   "source": [
+    "## Batting and Salaries Dataset\n",
+    "\n",
+    "## Quiz\n",
+    "\n",
+    "- Read Baseball datasets from Lahman available in github repository under data using `pd.read_csv()` \n",
+    "- Get columns ('yearID', 'teamID', 'salary') from salary.csv and ('yearID', 'teamID', 'G', 'R', 'HR') from batting.csv. (G: Games, R: Runs, HR: Home Runs)\n",
+    "- find `.head()` method to observe the first 6 rows.\n",
+    "- Use `.describe()` method for obtaining summary for numeric variables.\n",
+    "\n",
+    "## Quiz. Contd.\n",
+    "\n",
+    "- Merge datasets batting and sal based on `yearID`\n",
+    "- Find the dimensions using `shape`\n",
+    "\n",
+    "## Quiz Contd.\n",
+    "\n",
+    "- Sum rows by year to find `merged1` and by team to find `merged2`\n",
+    "- Create new column `HRG` derived as `HR/G` (Home runs per gamee) for `merged1` and `merged2`.\n",
+    "\n",
+    "## Quiz Contd.\n",
+    "\n",
+    "- Plot `HR` vs. `yearID` for `merged1` and for `merged` when teamID is `ATL`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "918a1baa",
+   "id": "d489087d",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2bf23162",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "438f69ae",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba82c818",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2c63090b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4e7c3bab",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "159616e5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cecfc7f5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "95c0ecca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
