outputs changed to print better

--- a/UCSAS_Python.ipynb
+++ b/UCSAS_Python.ipynb
@@ -185,7 +185,7 @@
     "- Python is one of the most promising programming language released in 1991 by `Guido Van Rossum`.\n",
     "- It is useful for creation of web applications, for software development, and now a lot in data science and constantly evolving.\n",
     "- It has an easy `syntax` similar to English, simple to read and write.\n",
-    "- The most recent major version of Python is `Python 3` although Python 2 is still used majorly inside mac systems for development.\n",
+    "- The most recent major version of Python is `Python 3.10` although Python 2 is still used majorly inside mac systems for development.\n",
     "- We can use Python via `command line`, IDE's like `PyCharm`, or applications such as `Jupyter Notebook`. \n",
     "- Python works on all the different platforms like `Windows, Mac, Linux`."
    ]
@@ -218,11 +218,9 @@
     "- **Basic Modules** and respective Functions\n",
     "    + **`numpy`**: Arrays, Universal Functions (Vectorized), Random numbers (Simulations)\n",
     "    + **`pandas`**: DataFrames, Data Manipulation\n",
-    "    + **`scipy`**: Stats functions, optimize functions\n",
-    "    + **`seaborn`**: Visualization\n",
     "    + Miscellaneous\n",
     "\n",
-    "- **Exercises**"
+    "- **Quiz**"
    ]
   },
   {
@@ -236,10 +234,10 @@
    "source": [
     "## Let's get Started\n",
     "\n",
-    "- We will be working on Jupyter Notebook to open a `Practice.ipynb` located in the [Github UCSAS 2021](https://github.com/suryaeada9/ucsas_intro_python).\n",
+    "- We will be working on Jupyter Notebook. \n",
+    "- Open `Practice.ipynb` located in the [Github UCSAS 2021](https://github.com/suryaeada9/ucsas_intro_python).\n",
     "- Download the file `Practice.ipynb`\n",
-    "- Open a Jupyter notebook from Anaconda GUI or from command line using command `jupyter notebook`\n",
-    "- Open the `Practice.ipynb` file"
+    "- Open a Jupyter notebook from Anaconda GUI or from command line using command `jupyter notebook`"
    ]
   },
   {
@@ -491,7 +489,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91c29884",
+   "id": "494241cf",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1458,7 +1456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0424970",
+   "id": "ef736bd8",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2077,7 +2075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24c235e3",
+   "id": "d80e2ce6",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2106,7 +2104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1828c252",
+   "id": "7a68ebf5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2167,7 +2165,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "4a00946d",
+   "id": "a6be781a",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2209,7 +2207,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e93a4192",
+   "id": "9d488b81",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2311,8 +2309,8 @@
    "source": [
     "import pandas as pd\n",
     "data = pd.Series([0.25, 0.5, 0.75, 1.0])\n",
-    "data.values\n",
-    "data.index"
+    "print(data.values)\n",
+    "print(data.index)"
    ]
   },
   {
@@ -2413,7 +2411,7 @@
     "states = pd.DataFrame({'population': population,\n",
     " 'area': area})\n",
     "\n",
-    "states"
+    "print(states)"
    ]
   },
   {
@@ -2512,17 +2510,15 @@
    ],
    "source": [
     "states['density'] =  states['population']/states['area']\n",
-    "states\n",
-    "\n",
     "\n",
     "## implicit and explicit index\n",
     "states.iloc[1:, :2]\n",
-    "states.loc[:'Florida', ['population', 'density']]"
+    "print(states.loc[:'Florida', ['population', 'density']])"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a2a032d4",
+   "id": "a8e73d68",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2552,7 +2548,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b934b513",
+   "id": "fc725000",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2667,13 +2663,13 @@
     "print(sal.head(6))\n",
     "print('')\n",
     "print('Describe:')\n",
-    "sal.describe().round(2)"
+    "print(sal.describe().round(2))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "5e71bce6",
+   "id": "de5235c1",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2703,7 +2699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a40ff76",
+   "id": "1a818b6f",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2719,7 +2715,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "8d0df891",
+   "id": "8de075c9",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2733,7 +2729,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "3ab2981a",
+   "id": "69165551",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2834,13 +2830,13 @@
     }
    ],
    "source": [
-    "merged.head()"
+    "print(merged.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "0978c26a",
+   "id": "07c03144",
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -2864,7 +2860,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bf7901",
+   "id": "838f2aa0",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -2880,7 +2876,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "de0130aa",
+   "id": "d86502e2",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -2979,13 +2975,13 @@
    "source": [
     "merged1 = merged.groupby('yearID').sum()\n",
     "merged2 = merged.groupby('teamID').sum()\n",
-    "merged1.head()"
+    "print(merged1.head())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "7b43a825",
+   "id": "187c5e13",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -3004,7 +3000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "513cf2ce",
+   "id": "165bcbd5",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -3019,7 +3015,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "55aa74b9",
+   "id": "43877b40",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -3057,7 +3053,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "e28f42e9",
+   "id": "65f657cd",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
